creditas-sf/force-app/main/default/objects/LeadCommunicationContact__c/LeadCommunicationContact__c.object-meta.xml
<CustomObject>
    <description>Contatos do Lead (Telefone, WhatsApp, Email, etc.)</description>
    <label>Contato do Lead</label>
    <nameField>
        <displayFormat>LC-{00000000}</displayFormat>
        <label>Número de Contato do Lead</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contatos do Lead</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>