creditas-sf/force-app/main/default/objects/LeadCommunicationContact__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Canal de Comunicação (Email, Phone, WhatsApp).</description>
    <inlineHelpText>Canal de Comunicação (Email, Phone, WhatsApp).</inlineHelpText>
    <label>Canal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>