creditas-sf/force-app/main/default/objects/LeadCommunicationContact__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Descrição do Canal de Comunicação (Email, Número de Telefone, Número de WhatsApp).</description>
    <inlineHelpText>Descrição do Canal de Comunicação (Email, Número de Telefone, Número de WhatsApp).</inlineHelpText>
    <label>Código</label>
    <length>100</length>
    <type>Text</type>
</CustomField>