creditas-sf/force-app/main/default/objects/LeadCommunicationContact__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que leva até o Lead ao qual pertence o Contato.</description>
    <inlineHelpText>Campo que leva até o Lead ao qual pertence o Contato.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Contatos do Lead</relationshipLabel>
    <relationshipName>LeadCommunicationContacts</relationshipName>
    <type>Lookup</type>
</CustomField>