creditas-sf/force-app/main/default/objects/LeadCommunicationContact__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tipo do Canal de Comunicação do Lead (Personal, Comercial).</description>
    <inlineHelpText>Tipo do Canal de Comunicação do Lead (Personal, Comercial).</inlineHelpText>
    <label>Tipo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>